02-traffic-control/destination-rule-layer2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: layer2
spec:
  host: layer2
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
