02-traffic-control/virtual-service-layer2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: layer2
spec:
  hosts:
  - layer2
  http:
  - match:
    - uri:
        exact: /call-layers
    - uri:
        exact: /get-info        
    - uri:
        exact: /
    route:
    - destination:
        host: layer2
        port:
          number: 8080
        subset: v1
      weight: 80
    - destination:
        host: layer2
        port:
          number: 8080
        subset: v2
      weight: 20
